<resources>
    <string name="app_name">Weball</string>
    <string name="hello_world">Hello world!</string>
    <string name="facebook">SE CONNECTER AVEC FACEBOOK</string>
    <string name="connecter">SE CONNECTER</string>
    <string name="inscription">S INSCRIRE</string>
    <string name="username">Votre nom d utilisateur</string>
    <string name="email">Votre email</string>
    <string name="password">Votre mot de passe</string>
    <string name="password2">Confirmez votre mot de passe</string>
    <string name="firstname">Votre prénom</string>
    <string name="lastname">Nom complet</string>
    <string name="birthday">Date de naissance</string>
    <string name="subscribe">Créer votre compte</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_page">loginPageActivity</string>
    <string name="demo_default">Default</string>
    <string name="demo_custom_animation">Custom Animation</string>
    <string name="demo_change_color">Change Color</string>
    <string name="demo_dynamic_adapter">Dynamic Adapter</string>
    <string name="createaccount">Créer votre compte</string>
    <string name="askinformation">Indiquez nous quelques informations</string>
    <string name="askpassword">Choisissez un mot de passe </string>
    <string name="askprofilepicture">Ajouter une photo de profil </string>
    <string name="subscribesuccess">Inscription terminée</string>
    <string name="subscription">Inscription</string>
    <string name="condition"> "En créant votre compte vous acceptez nos conditions générales d'utilisations et comprenez notre politique de confidentialité"</string>
    <string name="five"> "FIVE"</string>
    <string name="calendar"> "Calendrier"</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="title_activity_maps">Map</string>
    <string name="fivename">Nom du terrain</string>
    <string name="waiting_match">EN ATTENTE</string>
    <string name="matchs_done"> "MATCHS ORGANISÉS" </string>
    <string name="reservate"> "BOOK"</string>
    <string name="bla">blablablalblablablablablablablablablablalblablablablablablablablablablalblablablablablablablablablablalblablablablablablablablablablalblablablablablablablablablablalblablablablablablablablablablalblablablablablablablablablablalblablablablablablablablablablalblablablablablablablablablablalblablablablablablablablablablalblablablablablablablablablablalblablablablablablablablablablalblablablablablablablablablablalblablablablablablabla</string>
    <string name="cancel">"Annuler"</string>
    <string name="reservation">"Réservation"</string>
    <string name="valider">"Valider"</string>
    <string name="matchname">Nom du Match</string>
    <string name="nbplayer">Nombre de joueurs</string>
    <string name="welcome">Bienvenue</string>
    <string name="welcomedescription">Prêt pour créer le match de vos rêves ?</string>
    <string name="startbutton">Commencer</string>
    <string name="ConnectionTitle">Se connecter</string>
    <string name="email_login">Adresse email</string>
    <string name="password_login">Mot de passe</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="ConnectionButton">Connexion</string>
    <string name="create_account_tag">Pas de compte ? Créer en un</string>
    <string name="term_politics">En créant un compte vous acceptez nos <b>Conditions Générales d\'Utilisation</b> et comprenez notre <b>Politique de confidentialité</b>.</string>
    <string name="cancel_search">Annuler</string>
    <string name="title_listFive">Five</string>
    <string name="user_profile_matchs_text">MATCHES</string>
    <string name="user_profile_teammates_text">TEAMMATES</string>
    <string name="user_profile_next_match_text">Prochains Matchs</string>
    <string name="user_profile_played_matchs">Matchs joués</string>
    <string name="user_profile_egality_text">NULS</string>
    <string name="user_profile_wins_text">VICTOIRES</string>
    <string name="user_profile_looses_text">"DÉFAITES"</string>
    <string name="hours_text">HORAIRES</string>
    <string name="AddressTextView">ADRESSE</string>
    <string name="phoneTextView">TÉlÉPHONE</string>
    <string name="priceTextView">PRIX</string>
    <string name="my_account">MON COMPTE</string>
    <string name="name_label">Nom du match</string>
    <string name="username_label">Pseudonyme</string>
    <string name="duration_label">Durée du match</string>
    <string name="time_label">Heure</string>
    <string name="private_label">Equipe privée</string>
    <string name="password_label">Mot de passe</string>
    <string name="apply_modif">Appliquer changements</string>
    <string name="ok">OK </string>
    <string name="label_country">Pays</string>
    <string name="teammate_title">Coéquipiés</string>
    <string name="title_search">Recherche</string>
    <string name="email_label">Email</string>
    <string name="birthday_label">Date de naissance</string>
    <string name="city_label">Ville</string>
    <string name="fullname_label">Nom complet</string>
    <string name="confirm_match">CONFIRMER</string>
    <string name="inwaiting">EN ATTENTE</string>
    <string name="friend_list_title">Liste d\'amis</string>

</resources>
