<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/wallpaper">

<ImageView
    android:id="@+id/logo"
    android:layout_alignParentTop="true"
    android:layout_marginTop="150dp"
    android:layout_centerHorizontal="true"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:src="@drawable/logo_weball"
    android:adjustViewBounds="true"
   />

    <Button
        android:id="@+id/facebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/t_darkgray"
        android:text="@string/facebook"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
    />

    <Button
        android:id="@+id/connecter"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@color/t_darkgray"
        android:text="@string/connecter"
        android:textColor="@color/white"
        android:layout_alignTop="@+id/inscription"
        android:layout_above="@+id/facebook"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/inscription"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@color/t_darkgray"
        android:text="@string/inscription"
        android:textColor="@color/white"
        android:layout_above="@+id/facebook"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>