<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/subscribe_wallpaper">


    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/prev"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/leftarrow"
            android:adjustViewBounds="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView0"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/prev"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/subscription"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextView1"
        android:layout_below="@+id/layout1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:text="@string/createaccount"/>

    <TextView
        android:id="@+id/textviewusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/TextView1"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/user_login"
        android:layout_below="@+id/textviewusername"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:inputType="textPersonName"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/textviewmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_below="@+id/user_login"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/user_email"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewmail"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:gravity="center" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextView2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="16dp"
        android:textColor="@color/green"
        android:text="Suivant"/>

</RelativeLayout>