<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/backgroundhome">

    <RelativeLayout
        android:id="@+id/headerlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/darkgray">

    <TextView
        android:id="@+id/cancel"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:layout_centerVertical="true"
        android:gravity="center"

        android:textSize="15sp"
        android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/reservate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation"
            android:textColor="@color/white"
            android:layout_centerVertical="true"

            android:textSize="18sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>


        <TextView
            android:id="@+id/validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valider"
            android:textColor="@color/white"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="15sp"
            android:gravity="center" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/secondLayout"
        android:layout_below="@id/headerlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/name_layout"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:textColor="@color/white"
                android:text="@string/name_label"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"/>


            <ImageView
                android:id="@+id/name_change_img"
                android:layout_alignTop="@id/label_name"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/rightarrow"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                />

            <TextView
                android:id="@+id/name"
                android:layout_alignTop="@id/label_name"
                android:layout_toLeftOf="@id/name_change_img"
                android:layout_toStartOf="@id/name_change_img"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/caldroid_middle_gray"
                android:layout_height="wrap_content" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/duration_layout"
            android:layout_below="@id/name_layout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:textColor="@color/white"
                android:text="@string/duration_label"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"/>


            <ImageView
                android:id="@+id/duration_change_img"
                android:layout_alignTop="@id/label_duration"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/rightarrow"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                />

            <TextView
                android:id="@+id/duration"
                android:layout_alignTop="@id/label_duration"
                android:layout_toLeftOf="@id/duration_change_img"
                android:layout_toStartOf="@id/duration_change_img"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/caldroid_middle_gray"
                android:layout_height="wrap_content" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/time_layout"
            android:layout_below="@id/duration_layout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:textColor="@color/white"
                android:text="@string/time_label"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"/>


            <ImageView
                android:id="@+id/time_change_img"
                android:layout_alignTop="@id/label_time"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/rightarrow"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                />

            <TextView
                android:id="@+id/time"
                android:layout_alignTop="@id/label_time"
                android:layout_toLeftOf="@id/time_change_img"
                android:layout_toStartOf="@id/time_change_img"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/caldroid_middle_gray"
                android:layout_height="wrap_content" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/private_layout"
            android:layout_below="@id/time_layout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:textColor="@color/white"
                android:text="@string/private_label"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"/>




            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_private"
                android:checked="false"
                android:layout_alignTop="@id/label_private"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />



        </RelativeLayout>





    </RelativeLayout>


</RelativeLayout>