<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/subscribe_wallpaper">


    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/prev"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/leftarrow"
            android:adjustViewBounds="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView0"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/prev"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"

            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/subscription"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextView1"
        android:layout_below="@+id/layout1"
        android:fontFamily="sans-serif-condensed"

        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/askinformation"/>



    <TextView
        android:id="@+id/textviewlastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@+id/TextView1"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/lastname"/>

    <EditText
        android:id="@+id/user_lastname"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewlastname"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:theme="@style/MyEditTextTheme"

        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:gravity="center" />

    <TextView
        android:id="@+id/textviewbirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_lastname"
        android:fontFamily="sans-serif-condensed"

        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/birthday"/>

    <EditText
        android:id="@+id/user_birthday"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_below="@+id/textviewbirthday"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:theme="@style/MyEditTextTheme"


        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="jj/mm/aaaa"
        android:gravity="center"
        android:inputType="datetime"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextView2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-condensed"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="14sp"
        android:textColor="@color/green"
        android:text="Suivant"/>

</RelativeLayout>